# safexcore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_IOS.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  Mining.md  README.md  selected_commits.txt
.github/workflows/: android-release.yml  macos-release.yml  macos-test.yml  release.yml  ubuntu-release.yml  ubuntu-test.yml  windows-release.yml  windows-test.yml
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  Doxyfile.in  FindUnbound.cmake  GenVersion.cmake  Version.cmake  test-static-assert.cpp
contrib/: CMakeLists.txt
contrib/epee/: CMakeLists.txt
contrib/snap/: safexd-wrapper  safexd.conf
include/: INode.h  IWallet.h
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/advancedwallet/: CMakeLists.txt  advancedwallet.cpp  advancedwallet.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  db_types.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_blackball.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  command_line.cpp  command_line.h  common_fwd.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.cpp  expect.h  http_connection.h  i18n.cpp  i18n.h  int-util.h  json_util.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  stack_trace.cpp  stack_trace.h  threadpool.cpp  threadpool.h  unordered_containers_boost_serialization.h  updates.cpp  updates.h  util.cpp  util.h  varint.h
src/crypto/: CMakeLists.txt  blake256.c  blake256.h  c_threads.h  chacha.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  keccak.c  random.c  random.h  rx-slow-hash.c  skein_port.h  slow-hash.c  tree-hash.c  variant2_int_sqrt.h
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_stat_info.h  difficulty.cpp  difficulty.h  hardfork.cpp  hardfork.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_pool.h
src/cryptonote_core/protobuf/: blocks.pb.cc  blocks.pb.h  cryptonote_to_protobuf.cpp  cryptonote_to_protobuf.h  get_outs.pb.cc  get_outs.pb.h  output_histogram.pb.cc  output_histogram.pb.h  transactions.pb.cc  transactions.pb.h
src/cryptonote_core/protobuf/proto/: get_outs.proto  output_histogram.proto  transactions.proto
src/cryptonote_protocol/: CMakeLists.txt  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  object_sizes.cpp
src/device/: CMakeLists.txt  device.cpp  device.hpp  device_default.cpp  device_default.hpp  device_ledger.cpp  device_ledger.hpp  log.cpp  log.hpp
src/gen_multisig/: CMakeLists.txt  gen_multisig.cpp
src/mnemonics/: CMakeLists.txt  chinese_simplified.h  dutch.h  electrum-words.cpp  electrum-words.h  english.h  english_old.h  esperanto.h  french.h  german.h  italian.h  japanese.h  language_base.h  lojban.h  portuguese.h  russian.h  singleton.h  spanish.h
src/multisig/: CMakeLists.txt  multisig.cpp  multisig.h
src/net/: CMakeLists.txt  error.cpp  error.h  parse.cpp  parse.h
src/p2p/: CMakeLists.txt  net_node.cpp  net_node.h  net_node.inl  net_node_common.h  net_peerlist.h  net_peerlist_boost_serialization.h  p2p_protocol_defs.h  stdafx.h
src/ringct/: CMakeLists.txt  bulletproofs.cc  bulletproofs.h  rctCryptoOps.c  rctCryptoOps.h  rctOps.cpp  rctSigs.cpp  rctTypes.cpp  rctTypes.h
src/rpc/: CMakeLists.txt  blocks.pb.cc  blocks.pb.h  core_rpc_server.cpp  core_rpc_server.h  core_rpc_server_commands_defs.h  core_rpc_server_error_codes.h  cryptonote_to_protobuf.cpp  cryptonote_to_protobuf.h  daemon_handler.cpp  daemon_handler.h  daemon_messages.cpp  daemon_messages.h  daemon_rpc_version.h  instanciations.cpp  message.cpp  message.h  message_data_structs.h  rpc_args.cpp  rpc_args.h  rpc_handler.h  transactions.pb.cc  transactions.pb.h  zmq_server.cpp  zmq_server.h
src/safex/: CMakeLists.txt  command.cpp  command.h  fee_distribution.cpp  fee_distribution.h  safex_account.cpp  safex_account.h  safex_core.cpp  safex_core.h  safex_feedback.cpp  safex_feedback.h  safex_feedback_token.cpp  safex_feedback_token.h  safex_offer.cpp  (+5 more)
src/wallet/api/win_wrapper/: CMakeLists.txt  windows_wallet_listener.cpp  windows_wallet_listener.h  windows_wrapper.cpp  windows_wrapper.h
tests/: CMakeLists.txt  README.md  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h
translations/: CMakeLists.txt  monero.ts  monero_fr.ts  monero_it.ts  monero_sv.ts
(+321 files in other folders)
